--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^6.4.1",
     "@mui/styled-engine-sc": "^6.4.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/cli": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,9 +27,11 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.14",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
